--- a/css/membertable.css
+++ b/css/membertable.css
@@ -36,6 +36,10 @@ td:nth-child(2) {
 .nooffline .offline {
 	display: none;
 }
+/* Hide Missing Equipment Display Settings */
+.nomissing .notok span {
+	display: none;
+}
 
 /* Online/Offline Status Indicator */
 .status {
