--- a/css/main.css
+++ b/css/main.css
@@ -26,9 +26,12 @@ body {
 	padding: 20px;
 	text-shadow: 1px 1px #000;
 }
+.reportOpen {
+	height: 1425px;
+}
 
 h1 {
-	margin: 10px 0;
+	margin: 10px 0 50px;
 	text-align: center;
 }
 
@@ -38,4 +41,30 @@ a, a:active, a:visited {
 }
 a:hover {
 	text-decoration: underline;
+}
+
+/* Error Message Styles */
+#error {
+	background: linear-gradient(to bottom, rgba(9, 47, 49, 0.5) 0%, rgba(2, 7, 10, 0.5) 100%);
+	border: 1px solid #197576;
+	border-radius: 10px;
+	left: 50%;
+	margin-left: -301px;
+	position: absolute;
+	top: 300px;
+	width: 600px;
+	word-wrap: break-word;
+	z-index: 3;
+}
+#error > p {
+	margin: 20px;
+}
+#error .message {
+	color: #999;
+	font-size: 10px;
+	overflow: hidden;
+}
+#error strong {
+	color: #fff;
+	display: block;
 }
